INTEGRACION FINKOK NAMM

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       }
     </style>
     <!-- html2pdf bundle (incluye html2canvas y jsPDF) para descarga directa del PDF -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-YcsIPWmEmG4Z4P2SdH6Pj4f0oD2qM0n4i16N4rw7CezKfOCMc2uUp6VcyiWlOAiM7qv2j2vDYCAK8+8RkYwPnw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script type="importmap">
 {
   "imports": {
